# qtcryptobacktester

./: CMakeLists.txt  downloadconfigdialog.cpp  downloadconfigdialog.h  downloadconfigdialog.ui  downloaddialog.cpp  downloaddialog.h  downloaddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
scripts/: downloaddata.py
styles/: style.qss
